resources/ingress/ingress.tpl.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-busola
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/server-snippet: 'server_tokens off;' # hide nginx version
    nginx.ingress.kubernetes.io/enable-cors: 'false'
spec:
  ingressClassName: nginx
  rules:
    - host: $DOMAIN
      http:
        paths:
          - backend:
              service:
                name: web
                port:
                  number: 8080
            path: /(.*)
            pathType: Prefix
          - backend:
              service:
                name: backend
                port:
                  number: 3001
            path: /backend(?:/|$)(.*)
            pathType: Prefix
